# services/kg-stream-api/src/main/kotlin/kvasir/services/api/kg/streams/OutboxPrinter.kt
@@ -1,7 +1,7 @@
 package kvasir.services.api.kg.streams
 
 import jakarta.enterprise.context.ApplicationScoped
-import kvasir.definitions.kg.ChangeResult
+import kvasir.definitions.kg.ChangeReport
 import kvasir.definitions.messaging.Channels
 import org.eclipse.microprofile.reactive.messaging.Incoming
 
@@ -9,8 +9,8 @@ import org.eclipse.microprofile.reactive.messaging.Incoming
 class OutboxPrinter {
 
     @Incoming(Channels.OUTBOX_SUBSCRIBE)
-    fun printOutboxEvent(changeResult: ChangeResult) {
-        println(changeResult)
+    fun printOutboxEvent(changeReport: ChangeReport) {
+        println(changeReport)
     }
 
 }
