# services/monolith/openapi/openapi.yaml
@@ -97,6 +97,24 @@ paths:
           content:
             application/json: {}
   /{podId}/changes:
+    get:
+      tags:
+      - Change History Api
+      parameters:
+      - name: podId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/ld+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ChangeReport"
     post:
       tags:
       - Knowledge Graph API
@@ -117,26 +135,7 @@ paths:
       responses:
         "202":
           description: Change request accepted.
-  /{podId}/changes/history:
-    get:
-      tags:
-      - Change History Api
-      parameters:
-      - name: podId
-        in: path
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ChangeReport"
-  /{podId}/changes/history/{changeId}:
+  /{podId}/changes/{changeId}:
     get:
       tags:
       - Change History Api
@@ -155,10 +154,10 @@ paths:
         "200":
           description: OK
           content:
-            application/json:
+            application/ld+json:
               schema:
                 $ref: "#/components/schemas/ChangeReport"
-  /{podId}/changes/history/{changeId}/records:
+  /{podId}/changes/{changeId}/records:
     get:
       tags:
       - Change History Api
@@ -177,11 +176,9 @@ paths:
         "200":
           description: OK
           content:
-            application/json:
+            application/ld+json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ChangeRecord"
+                $ref: "#/components/schemas/ChangeRecords"
   /{podId}/query:
     post:
       tags:
@@ -453,8 +450,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  additionalProperties: {}
+                  $ref: "#/components/schemas/ChangeRecords"
   /{podId}/s3/{objectKey}:
     get:
       tags:
@@ -558,35 +554,33 @@ components:
           description: The GraphQL query string to be executed.
           type: string
           example: "{ id ex_givenName(_: \"Bob\") }"
-    ChangeRecord:
+    ChangeRecords:
       required:
-      - changeRequestId
+      - context
+      - id
       - timestamp
-      - type
-      - statement
       type: object
       properties:
-        changeRequestId:
+        context:
+          type: object
+          additionalProperties: {}
+        id:
           type: string
         timestamp:
           $ref: "#/components/schemas/Instant"
-        type:
-          $ref: "#/components/schemas/ChangeRecordType"
-        statement:
-          $ref: "#/components/schemas/RDFStatement"
-    ChangeRecordType:
-      enum:
-      - INSERT
-      - DELETE
-      type: string
+        deleted: {}
+        inserted: {}
     ChangeReport:
       required:
       - id
+      - podId
       - timestamp
       - resultCode
       type: object
       properties:
         id:
+          type: string
+        podId:
           type: string
         timestamp:
           $ref: "#/components/schemas/Instant"
@@ -737,26 +731,6 @@ components:
           items:
             type: object
             additionalProperties: {}
-          nullable: true
-    RDFStatement:
-      required:
-      - subject
-      - predicate
-      - graph
-      type: object
-      properties:
-        subject:
-          type: string
-        predicate:
-          type: string
-        object: {}
-        graph:
-          type: string
-        dataType:
-          type: string
-          nullable: true
-        language:
-          type: string
           nullable: true
     RegisterPodInput:
       required:
